--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,30 +5,39 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build:css": "tailwindcss -i ./src/public/admin/css/styles.css -o ./public/admin/css/admin-styles.css",
+    "watch:css": "tailwindcss -i ./src/public/admin/css/styles.css -o ./public/admin/css/admin-styles.css --watch",
+    "dev": "concurrently \"npm run watch:css\" \"nodemon src/index.ts\"",
+    "build": "npm run build:css && tsc",
     "lint": "eslint . --ext .ts",
     "test": "jest"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.10.0"
+    "otplib": "^12.0.1",
+    "pg": "^8.10.0",
+    "sharp": "^0.34.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
@@ -37,10 +46,14 @@
     "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^8.2.2",
     "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "postcss": "^8.5.3",
     "supertest": "^6.3.3",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
