--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -35,6 +36,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-ejs-layouts": "^2.5.4",
